fix vertical align of main tag and input auto fill color

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --themeColor3 : #737373;
     --themeColor4 : #A6A6A6;
     --themeColor5 : #F2F2F2;
-    --darkInput : #2c2c2c;
-    --lightInput : #f8f8f8;
+    --inputColor1 : #2c2c2c;
+    --inputColor2 : #f8f8f8;
     --boxShadow: 1px 1px 2px 2px var(--themeColor4);
     --dropShadow: drop-shadow(2.5px 2.5px 5px var(--themeColor4));
 /* } */
@@ -194,6 +194,8 @@ header{
     height: 70px;
     box-sizing: border-box;
     position: relative;
+    /* display: none; */
+    /* visibility: hidden; */
 }
 
 nav{
@@ -318,15 +320,20 @@ nav{
 /* main styling */
 /* main styling */
 main{
+    overflow-x: hidden;
+    min-height: calc(100vh - 70px);
     padding: 0 20px;
     display: flex;
     flex-flow: column;
+    justify-content: center;
     position: relative;
-    overflow-x: hidden;
-    /* background-color: red; */
-    min-height: calc(100vh - 70px);
 }
 
+.main-wrapper{
+    display: flex;
+    flex-flow: column;
+    height: max-content;
+}
 
 .main-heading{
     width: 100%;
@@ -339,7 +346,7 @@ main{
     color: var(--themeColor2);
     font-family: poppins;
     font-weight: 400;
-    height: 320px;
+    height: max-content;
 }
 
 .setup-text{
@@ -366,7 +373,7 @@ main{
     color: var(--themeColor2);
     font-family: poppins;
     font-size: .8em;
-    max-width: 500px;
+    max-width: 450px;
     /* visibility: hidden; */
     /* background-color: red; */
 }
@@ -394,8 +401,8 @@ main{
     font-size: .8em;
     color: var(--themeColor1);
     position: absolute;
-    bottom: 70px;
-    right: -10px;
+    bottom: 50px;
+    right: -15px;
     transform: rotateZ(90deg);
     animation-name: scrollDown;
     animation-duration: 2s;
@@ -404,9 +411,9 @@ main{
 }
 
 @keyframes scrollDown {
-    0% {bottom: 70px;}
-    50% {bottom: 100px;}
-    100% {bottom: 70px;}
+    0% {bottom: 50px;}
+    50% {bottom: 80px;}
+    100% {bottom: 50px;}
 }
 
 #main-canvas{
@@ -444,7 +451,7 @@ main{
 }
 
 .card{
-    background-color: var(--lightInput);
+    background-color: var(--inputColor2);
     text-decoration: none;
     border-radius: 15px;
     color: unset;
@@ -495,7 +502,7 @@ main{
     padding: 0 20px;
     box-sizing: border-box;
     height: 35%;
-    background-color: var(--lightInput);
+    background-color: var(--inputColor2);
     border-radius: 0 0 15px 15px;
     z-index: 2;
 }
@@ -618,10 +625,26 @@ main{
 #contact-form input, #contact-form textarea{
     padding: 15px 10px;
     font-family: poppins;
-    background-color: var(--lightInput);
     border: 1px solid var(--themeColor1);
     border-radius: 2px;
+    background-color: var(--inputColor2);
     color: var(--themeColor1);
+}
+
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid var(--themeColor1);
+  -webkit-text-fill-color: var(--themeColor1);
+  -webkit-box-shadow: 0 0 0px 1000px var(--themeColor5) inset;
 }
 
 #contact-form input::placeholder, #contact-form textarea::placeholder{
